<resources>
	<string name="app_name" translatable="false">TaoKDao</string>
	<string name="business_build_manage_chooser_title">Choose Builder</string>
	<string name="business_build_manage_nobuildeoption_content">No builder option found</string>
	<string name="business_build_manage_nobuildeoption_title">Builder</string>
	<string name="business_build_manage_nobuilder_content">No builder found</string>
	<string name="business_build_manage_nobuilder_title">Builder</string>
	<string name="business_build_manage_noprojectopened_content">No project opened</string>
	<string name="business_build_manage_noprojectopened_title">Builder</string>
	<string name="business_exit_control_confirm_dialog_content">Tips: Are your files all saved?</string>
	<string name="business_exit_control_confirm_dialog_title">Exit TaoKDao</string>
	<string name="business_file_open_choose_opener_unsupported">Choose an opener</string>
	<string name="business_file_open_file_unsupported">The file is temporarily not supported by the opener</string>
	<string name="business_file_open_opener_filechooseopener_description">choose an opener</string>
	<string name="business_file_open_opener_filechooseopener_label">OpenerChooser</string>
	<string name="business_file_open_opener_filetemplateopener_description">Edit File Template</string>
	<string name="business_file_open_opener_filetemplateopener_label">FileTemplateOpener</string>
	<string name="business_file_open_opener_imagevieweropener_description">Image viewer for common images</string>
	<string name="business_file_open_opener_imagevieweropener_label">ImageViewer</string>
	<string name="business_file_open_opener_suffixopener_description">choose an opener for suffix</string>
	<string name="business_file_open_opener_suffixopener_label">Opener Chooser</string>
	<string name="business_file_operate_operate_failed">operation failed</string>
	<string name="business_file_template_choose_dialog_new">New</string>
	<string name="business_file_template_choose_dialog_title">FileTemplate</string>
	<string name="business_file_template_dialog_back">Back</string>
	<string name="business_file_template_dialog_delete">Delete</string>
	<string name="business_file_template_dialog_edit">Edit</string>
	<string name="business_file_template_dialog_filenameempty">file name can\'t be empty</string>
	<string name="business_file_template_fileexists_dialog_title">File Already Exists</string>
	<string name="business_permission_request_dialog_title">Permission Check</string>
	<string name="business_permission_request_permission_denied">Permission denied!</string>
	<string name="business_permission_request_manage_storage_needed">TaoKDao needs "All files access" to read and write your files. In the next screen, find TaoKDao and enable "All files access".</string>
	<string name="business_permission_request_manage_storage_recheck">Have you enabled the permission in Settings? Tap OK to continue.</string>
	<string name="business_plugin_install_dialog_action_degrade">Degrade</string>
	<string name="business_plugin_install_dialog_action_recover">Recover</string>
	<string name="business_plugin_install_dialog_action_upgrade">Upgrade</string>
	<string name="business_plugin_install_dialog_install">Install</string>
	<string name="business_plugin_install_dialog_install_failed">Plugin Install Failed</string>
	<string name="business_plugin_install_dialog_install_success">Plugin Install Success</string>
	<string name="business_plugin_install_dialog_installing">Installing</string>
	<string name="business_plugin_install_dialog_item_author">Author</string>
	<string name="business_plugin_install_dialog_item_description">Description</string>
	<string name="business_plugin_install_dialog_item_id">Identifier</string>
	<string name="business_plugin_install_dialog_item_installed">Installed</string>
	<string name="business_plugin_install_dialog_item_readme">Readme</string>
	<string name="business_plugin_install_dialog_item_readme_review">Click To Review</string>
	<string name="business_plugin_install_dialog_item_version">Version</string>
	<string name="business_plugin_install_install_dialog_uninstall">Unistall</string>
	<string name="business_plugin_install_install_success_dialog_content">Restart TaoKDao Now ?</string>
	<string name="business_plugin_install_install_success_dialog_title">Install Plugin Success</string>
	<string name="business_plugin_install_installpluginerror">install plugin error: unknown reason, please view event</string>
	<string name="business_plugin_install_loadplugin_dialog_title">Loading Plugin...</string>
	<string name="business_plugin_install_loadpluginerror">load plugin error: unknown reason, please view event</string>
	<string name="business_plugin_install_uninstall_failed">Plugin Uninstall Failed</string>
	<string name="business_plugin_install_uninstall_success">Plugin Uninstall Success</string>
	<string name="business_plugin_install_uninstallpluginerror">uninstall plugin error: unknown reason, please view event</string>
	<string name="business_plugin_manage_nomdfile">No README File</string>
	<string name="business_plugin_uninstall_dialog_uninstalling">Uninstalling</string>
	<string name="business_project_manage_openfailed_error">open project error: unknown reason, please view log</string>
	<string name="business_project_manage_openfailed_notconfig">"Failure: Not the project configuration file!  "</string>
	<string name="business_project_manage_openfailed_notprojectdir">"Failure: Not the project folder  "</string>
	<string name="business_project_template_choose_dialog_title">Template</string>
	<string name="business_project_templates_filetemplate_description">create from file template</string>
	<string name="business_project_templates_filetemplate_label">FileTemplate</string>
	<string name="business_session_control_filenotexists">file not exists to open</string>
	<string name="business_setting_main_display_changedark">Dark(Light) Mode</string>
	<string name="business_theme_manage_changetheme_dialog_content">Restart and apply dark(light) mode</string>
	<string name="business_theme_manage_changetheme_dialog_title">Theme</string>
	<string name="business_toolpage_window_newtooltab_dialog_title">new ToolTab tab</string>
	<string name="contents_guider_file">File</string>
	<string name="contents_guider_help">Help</string>
	<string name="contents_guider_project">Project</string>
	<string name="contents_guider_project_openproject">Open Project</string>
	<string name="copy_success">copy success</string>
	<string name="copy_text">Copy</string>
	<string name="drawerleft_spinnar_fileexplorer">File Explorer</string>
	<string name="drawerleft_spinnar_projectfiles">Project Files</string>
	<string name="drawerleft_spinnar_projectstructure">Project Structure</string>
	<string name="error">Error</string>
	<string name="explorers_projectfiles_menu_collapse">collapse</string>
	<string name="explorers_projectfiles_menu_refresh">refresh</string>
	<string name="explorers_projectstructure_menu_collapse">collapse</string>
	<string name="explorers_projectstructure_menu_refresh">refresh</string>
	<string name="file_builders_htmlviewer_label">Html Viewer</string>
	<string name="file_opened">"File has been opened"</string>
	<string name="file_operators_createfromtemplate_label">Create From Template</string>
	<string name="file_operators_delete_dialog_title">Delete File(Directory)?</string>
	<string name="file_operators_delete_label">Delete File(Directory)</string>
	<string name="file_operators_newfile_dialog_title">Enter file name</string>
	<string name="file_operators_newfile_failed">Create file failed!</string>
	<string name="file_operators_newfile_label">New File</string>
	<string name="file_operators_newfile_success">Create file successfully!</string>
	<string name="file_operators_newfolder_dialog_title">Enter folder name</string>
	<string name="file_operators_newfolder_failed">Create folder failed!</string>
	<string name="file_operators_newfolder_label">New Folder</string>
	<string name="file_operators_newfolder_success">Create folder successfully!</string>
	<string name="file_operators_openastext_label">Open As Text File</string>
	<string name="file_operators_openproject_label">Open Project</string>
	<string name="file_operators_rename_dialog_title">Enter new file name</string>
	<string name="file_operators_rename_failed">Rename failed!</string>
	<string name="file_operators_rename_label">Rename File</string>
	<string name="file_operators_rename_success">Successfully renamed!</string>
	<string name="file_saved">Files have been saved</string>
	<string name="file_saved_all">All files have been saved</string>
	<string name="genkey_cert_path">Cert Path:</string>
	<string name="genkey_common_name">Common Name:</string>
	<string name="genkey_country">Country@</string>
	<string name="genkey_date">Vilidity Date:</string>
	<string name="genkey_key_alias">Alias:</string>
	<string name="genkey_key_pass">Private Key Password:</string>
	<string name="genkey_key_path">Key Path:</string>
	<string name="genkey_key_type">Key Type:</string>
	<string name="genkey_locality_name">Locality Name:</string>
	<string name="genkey_organization_name">Organization Name:</string>
	<string name="genkey_organization_unit">Organization Unit@</string>
	<string name="genkey_state_name">State Name:</string>
	<string name="genkey_store_pass">Keystore Password:</string>
	<string name="main_menu_build_buildfile">Build File</string>
	<string name="main_menu_build_buildproject">Build Project</string>
	<string name="main_menu_build_buildoption">Build Option</string>
	<string name="main_menu_display_changefullscreen">Toggle Full-screen</string>
	<string name="main_menu_display_showcontentsetting">Content Setting</string>
	<string name="main_menu_display_showpluginpopup">Plugin Launcher</string>
	<string name="main_menu_display_showtoolwindow">ToolPage Window</string>
	<string name="main_menu_edit_docblock">Note Block Doc</string>
	<string name="main_menu_edit_findreplace">Find&amp;Replace</string>
	<string name="main_menu_edit_noteblock">Note Block</string>
	<string name="main_menu_edit_searchcurrent">Search Current</string>
	<string name="main_menu_file_closeall">Close All</string>
	<string name="main_menu_file_closecurrent">Close Current</string>
	<string name="main_menu_file_closeother">Close Other</string>
	<string name="main_menu_file_openfile">Open File</string>
	<string name="main_menu_file_saveall">Save All</string>
	<string name="main_menu_file_savecurrent">Save Current</string>
	<string name="main_menu_project_appintroduce">App Introduce</string>
	<string name="main_menu_project_closeproject">Close Project</string>
	<string name="main_menu_project_law">Legal Information</string>
	<string name="main_menu_project_newproject">New Project</string>
	<string name="main_menu_project_reopenproject">Reopen Project</string>
	<string name="main_menu_setting_appsetting">App Setting</string>
	<string name="main_setting_darkmode">Dark Mode</string>
	<string name="main_setting_darktheme">Dark Theme</string>
	<string name="main_setting_darktheme_default">Default</string>
	<string name="main_setting_display">Display</string>
	<string name="main_setting_displaylanguage">Display Language</string>
	<string name="main_setting_language">Language</string>
	<string name="main_setting_language_en" translatable="false">English</string>
	<string name="main_setting_language_followsystem">Follow System</string>
	<string name="main_setting_language_zh" translatable="false">简体中文</string>
	<string name="main_setting_lighttheme">Light Theme</string>
	<string name="main_setting_lighttheme_default">Default</string>
	<string name="main_setting_openrecordedfiles">Open Recorded Files</string>
	<string name="main_setting_openrecordedproject">Open Recorded Project</string>
	<string name="main_setting_preservation">Preservation</string>
	<string name="main_setting_recordopenedfiles">Record Opened Files</string>
</resources>